--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,28 @@
 <body>
 	<div ng-include src="'views/common/header.html'"></div>
     <div data-ui-view="" class="main-body-div">
+
+    </div>
+    <div class="top-content-div">
+    	<div class="top-div-subtitle">
+    		Aktualno
+    	</div>
+    	<div class="top-div-items">
+    		<ul class="top-div-list">
+			  <li><a>Nov komad "Izlet"</a>
+			  	<p>Prejšnji teden je izšel nov singl ....<a class="read-more">preberi več</a></p>
+			  </li>
+
+			  <li><a>Koncert Beer Pub 13.10.</a>
+			  	<p>Vabljeni na koncert, kjer bo predstavitev novih komadov ... <a class="read-more">preberi več</a></p>
+
+			  </li>
+			  <li><a>Koncert Vopa 29.9.</a>
+			  	<p>Fotke iz koncerta v Vopi so že na voljo v galeriji na spletni strani...<a class="read-more">preberi več</a></p>
+			  </li>
+			</ul>
+    	</div>
+
     </div>
     <div ng-include src="'views/common/footer.html'"></div>
 </div>
@@ -29,15 +51,6 @@
 <script src="js/controllers/WorkCtrl.js"></script>
 <script src="js/controllers/OtherCtrl.js"></script>
 <script src="js/controllers/GalleryCtrl.js"></script>
-
-
-
-
-
-<!-- home.js bomo kasneje dali v svoj controller -->
-<!-- <script src="home.js"></script> -->
-
-
 
 </body>
 </html>
